<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/btClose"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_gravity="end"
        android:layout_margin="16dp"
        android:background="@drawable/ic_close"
        android:contentDescription="@string/string_close" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/font_comic"
        android:lineSpacingExtra="-8dp"
        android:text="@string/tvname_friend"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginEnd="16dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_et_blue"
        android:hint="@string/nama_temanmu"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textSize="20sp" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/font_comic"
        android:lineSpacingExtra="-8dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginEnd="16dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_et_profile"
        android:hint="@string/email_temanmu"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btSaveFriend"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bg_but_gray"
        android:fontFamily="@font/comic"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/colorBgWhite"
        android:textSize="18sp"
        android:textStyle="normal"
        app:backgroundTint="@color/ColorBgButGray" />

    <Button
        android:id="@+id/btDeleteFriend"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="-10dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/bg_but_orange"
        android:fontFamily="@font/comic"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="normal"
        app:backgroundTint="@color/ColorBgButOrange" />

</LinearLayout>