<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:backgroundTint="@color/colorBgWhite"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView

            android:id="@+id/tvMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="@font/comic"
            android:gravity="center_horizontal"
            android:text="@string/play_mode"
            android:textAlignment="center"
            android:textColor="@color/ColorBlackFont"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="359dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="@font/comic"
            android:text="@string/result"
            android:textColor="@color/ColorBlackFont"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="@font/comic"
            android:text="@string/date"
            android:textColor="@color/ColorBlackFont"
            android:textSize="12sp" />
    </LinearLayout>


</androidx.cardview.widget.CardView>