<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog"
    android:orientation="vertical">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lav_success"
        android:layout_gravity="center_horizontal"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="50dp"
        app:lottie_rawRes="@raw/ic_winner" />

    <TextView
        android:id="@+id/winner"
        android:layout_width="wrap_content"
        android:layout_height="73dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/font_comic"
        android:lineSpacingExtra="-8dp"
        android:text="@string/text_winner"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="26sp" />

    <Button
        android:id="@+id/play_again"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_but_gray"
        android:text="@string/return_play"
        android:textAllCaps="false"
        android:textColor="@color/colorBgWhite"
        android:textSize="18sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/back_menu"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/bg_but_orange"
        android:text="@string/back_menu"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="normal"/>

</LinearLayout>