<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cce7e8"
    android:orientation="vertical"
    tools:context=".SplashScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/logo_font"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.88" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/rockImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/rock_icon"
            android:src="@drawable/ic_batu_but"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.527"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/paperImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginBottom="200dp"
            android:contentDescription="@string/paper_icon"
            android:src="@drawable/ic_paper_but"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/scissorsImage"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rockImage"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/scissorsImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp"
            android:contentDescription="@string/scissors_icon"
            android:src="@drawable/ic_scissors_but"
            app:layout_constraintBottom_toBottomOf="@+id/paperImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/paperImage"
            app:layout_constraintTop_toBottomOf="@+id/rockImage" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>